[package]
name = "shadows"
authors = ["Oliver Janka <info@oliverjanka.ch>"]
version = "1.0.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
reqwest = { version = "0.11.11", features = ["blocking"] }
clap = { version = "3.2.20", features = ["derive"] }